# hw-eliasfano

./: .gitignore  .travis.yml  README.md  circle.yml  hw-eliasfano.cabal  moo.ef  package.yaml  project.sh  stack.yaml
.circleci/: config.yml
app/App/: Codec.hs  Commands.hs
app/App/Commands/: CreateIndex.hs  LoadSave.hs  Types.hs
bench/: Main.hs
src/HaskellWorks/Data/: EliasFano.hs  EliasFano64.hs  FromListWord64.hs  ToListWord64.hs
src/HaskellWorks/Data/EliasFano/: Internal.hs
src/HaskellWorks/Data/EliasFano64/: Internal.hs
test/HaskellWorks/Data/: EliasFano64Spec.hs  EliasFanoSpec.hs
test/HaskellWorks/Data/EliasFano/: Reference.hs  ReferenceSpec.hs
